# findmax

./: .gitignore  COPYING  Makefile  README.md  benchmark.sh  benchmark_report.csv  benchmark_report.md  benchmark_report.tex  file_ops.c  findmax-completion.bash  findmax.1  findmax.h  findmax.pc.in  format.c  heap.c  libfindmax.c  libfindmax.h  main.c  meson.build  test_findmax.c
debian/: changelog  control  copyright  findmax.install  libfindmax-dev.install  libfindmax1.install  rules
